@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2024-11-04 18:56:51+00:00 - build 6389
+
+1. Fix replacing empty strings in Editor.
+
+--------------------------------------------------------------------------------
 drkns 2024-10-31 20:22:20+00:00 - build 6388
 
 1. Continue 6385.5.
